# backend-health_connect

./: .gitignore  README.md  config.py  database.py  main.py  pyproject.toml  requirements.txt  vercel.json
models/: __init__.py  appointment.py  contact.py  doctor.py  user.py
routers/: __init__.py  appointments.py  auth.py  contact.py  doctors.py  users.py
schemas/: __init__.py  appointment.py  contact.py  doctor.py  token.py  user.py
templates/: appointment_confirmation.html  email_verification.html
utils/: __init__.py  email_utils.py  seed_doctors.py  token_utils.py
